1999-08-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c: added missing #ifdef SESSION

1999-08-09  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* fvwm/screen.h: 
	* fvwm/borders.c: fixed 'LeftJustified' flag for title style.
	There seems to be a flag conflict. THe title style flags should really
	be rewritten in GSFR style to avoid further conflicts.

1999-08-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/borders.c (SetShape): applied fix for ShapeNotify events on non
	shaped windows by Owen Taylor (otaylor@redhat.com)

	* fvwm/menus.c (OldMenuStyle): fixed quoting in old menu style syntax

1999-08-06  Hippo

	* fvwm/move_resize.c: Fixed interactive resize to not allow borders
	to be resized off screen if client has resize increments > 1.

1999-08-06  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* fvwm/fvwm2.1 (IgnoreModifiers): make it clear that the command
	should appear before any bindings are made.

	* libs/Bindings.c (GrabWindowButton):
	(GrabWindowKey): fixed bindings with 'N'o modifiers and the
	IgnoreModifiers command

	* fvwm/add_window.c (AddWindow): fixed grabbing of buttons for
	ClickToFocus and MouseFocusClickRaises

	* libs/fvwmlib.h:
	* libs/Bindings.c (GrabWindowButton): made function global again

1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* configure.in: changed version to 2.3.7

	* libs/Makefile.am: ColorSets.h -> Colorset.h

	* fvwm/events.c (HandleButtonRelease):
	* fvwm/session.c (getUniqueStateFilename):
	(LoadGlobalState):
	removed unused variables

1999-08-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder): fixed window title drawing

	* fvwm/move_resize.c (moveLoop): fixed a bug that cause windows to jump
	around when moved against a page boundary

	* fvwm/add_window.c (AddWindow):
	* fvwm/move_resize.c (resize_window):
	(DoResize):
	(Maximize):
	* fvwm/events.c (HandlePropertyNotify):
	(HandleConfigureRequest): use new signature of ConstrainSize
